[package]
name = "storm-cli"
description = "Storm node command-line interface"
version = "0.8.0-beta.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "microservice", "lightning-network", "lnp-bp", "storage"]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "storm-cli"

[dependencies]
amplify = "3.12.0"
strict_encoding = "0.8.0"
stens = "0.7.1"
internet2 = "0.8.0"
microservices = { version = "0.8.0", default-features = false, features = ["cli"] }
storm-core = "0.8.0-beta.4"
storm_rpc = { version = "0.8.0-beta.1", path = "../rpc" }
store_rpc = "0.8.0-rc.4"
lnp-core = "0.8.0-beta.2"
lnp_rpc = { version = "0.8.0-beta.1", git = "https://github.com/LNP-WG/lnp-node" }
shellexpand = "2.1"
clap = { version = "~3.1.18", features = ["derive", "env"] }
log = "0.4.14"
colored = "2"

[build-dependencies]
amplify = "3.12.0"
stens = "0.7.1"
storm-core = "0.8.0-beta.4"
storm_rpc = { version = "0.8.0-beta.1", path = "../rpc" }
store_rpc = "0.8.0-rc.4"
lnp_rpc = { version = "0.8.0-beta.1", git = "https://github.com/LNP-WG/lnp-node" }
internet2 = "0.8.0-beta.1"
clap = { version = "~3.1.18", features = ["derive", "env"] }
clap_complete = "~3.1.4"
configure_me_codegen = "0.4"
