[package]
name = "storm-cli"
description = "Storm node command-line interface"
version = "0.9.0-rc.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "microservice", "lightning-network", "lnp-bp", "storage"]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "storm-cli"

[dependencies]
amplify = "3.13.0"
strict_encoding = "0.9.0-rc.2"
stens = "0.9.0-rc.1"
internet2 = "0.9.0-rc.1"
microservices = { version = "0.9.0-rc.1", default-features = false, features = ["cli"] }
storm-core = "0.9.0-rc.1"
storm_rpc = { version = "0.9.0-rc.1", path = "../rpc" }
store_rpc = "0.9.0-rc.1"
lnp-core = "0.9.0-rc.1"
lnp_rpc = "0.9.0-rc.1"
shellexpand = "2.1"
clap = { version = "~3.2.23", features = ["derive", "env"] }
log = "0.4.14"
colored = "2"

[build-dependencies]
amplify = "3.13.0"
stens = "0.9.0-rc.1"
storm-core = "0.9.0-rc.1"
storm_rpc = { version = "0.9.0-rc.1", path = "../rpc" }
store_rpc = "0.9.0-rc.1"
lnp_rpc = "0.9.0-rc.1"
internet2 = "0.9.0-rc.1"
clap = { version = "~3.2.23", features = ["derive", "env"] }
clap_complete = "~3.2.5"
configure_me_codegen = "0.4"
