[package]
name = "storm_ext"
description = "Storm node extension integration API"
version = "0.8.0-alpha.2"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "microservice", "lightning-network", "lnp-bp", "storage"]
categories = ["network-programming"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"

[lib]
name = "storm_ext"

[dependencies]
amplify = "3.12.1"
strict_encoding = "0.8.0"
internet2 = "0.8.0"
microservices = { version = "0.8.0", default-features = false, features = ["client"] }
storm-core = "0.8.0-alpha.1"
storm_rpc = { version = "0.8.0-alpha.2", path = "../rpc" }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
const_format = "0.2.25"
log = "0.4.14"
once_cell = "1.12.0"

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "serde_crate", "serde_with", "serde_yaml",
    "amplify/serde", "internet2/serde", "microservices/serde",
]
