[package]
name = "storm_rpc"
description = "Storm node RPC API"
version = "0.8.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "microservice", "lightning-network", "lnp-bp", "storage"]
categories = ["network-programming"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"

[lib]
name = "storm_rpc"

[dependencies]
amplify = "3.12.1"
strict_encoding = "0.8.0"
lnp2p = { version = "0.8.0", features = ["bifrost"] }
storm-core = "0.8.0"
internet2 = "0.8.0"
microservices = { version = "0.8.10", default-features = false, features = ["client"] }
rand = "0.8.5"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
log = "0.4.14"

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "serde_crate", "serde_with", "serde_yaml",
    "amplify/serde", "internet2/serde", "microservices/serde",
]
